<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View.OnClickListener" />

        <variable
            name="listener"
            type="android.view.View.OnClickListener" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/content_padding"
            android:paddingEnd="@dimen/content_padding">

            <ImageView
                android:id="@+id/noConnImg"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:clickable="true"
                android:contentDescription="@string/no_connection"
                android:focusable="true"
                android:onClick="@{(v) -> listener.onClick(v)}"
                android:src="@drawable/ic_alert_msg"
                android:tint="#ccc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primaryText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/error_msg"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primaryText" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/retryBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="?listPreferredItemPaddingLeft"
            android:layout_marginEnd="?listPreferredItemPaddingLeft"
            android:layout_marginBottom="?listPreferredItemPaddingLeft"
            android:onClick="@{(v) -> listener.onClick(v)}"
            android:text="@string/btn_retry"
            android:textAllCaps="true"
            app:backgroundTint="@color/colorPrimary" />
    </RelativeLayout>
</layout>

