<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="value"
            type="java.lang.String" />

        <variable
            name="descr"
            type="java.lang.String" />

        <variable
            name="icon"
            type="android.graphics.drawable.Drawable" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:background="?selectableItemBackground"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingStart="?listPreferredItemPaddingLeft"
        android:paddingEnd="?listPreferredItemPaddingRight">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="?listPreferredItemPaddingLeft"
            android:contentDescription="@string/proximity_alert"
            android:src="@{icon}"
            tools:src="@drawable/ic_earth" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{value}"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primaryText"
                tools:text="@string/value_hazard_no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{descr}"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@color/secondaryText"
                tools:text="@string/descr_hazard_no" />
        </LinearLayout>

    </LinearLayout>

</layout>